# cuda_driver_api_test

./: CMakeLists.txt  LICENSE  README.md
src/: kernel.cu  main.cpp
